--- a/Results/Class_Weights_Accuracy_Score_Cleaning_and_Hyperparmeter_Search_With_PageRank_Filter.ipynb
+++ b/Results/Class_Weights_Accuracy_Score_Cleaning_and_Hyperparmeter_Search_With_PageRank_Filter.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
        "[6239205 rows x 7 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +482,7 @@
        "[5 rows x 2051 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +680,7 @@
        "[6239205 rows x 7 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -691,15 +691,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax. Perhaps you forgot a comma? (2354823755.py, line 71)",
+     "evalue": "invalid syntax (1877938582.py, line 72)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[6], line 71\u001b[1;36m\u001b[0m\n\u001b[1;33m    class_weight=trial.suggest_categorical(\"svc_class_weight_option\", [None, \"balanced\"])\u001b[0m\n\u001b[1;37m                 ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
+      "\u001b[1;36m  Cell \u001b[1;32mIn[17], line 72\u001b[1;36m\u001b[0m\n\u001b[1;33m    random_state=1234,\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -767,14 +767,14 @@
     "        max_depth_option = trial.suggest_categorical(\"rf_max_depth_option\", [None, \"Specify\"])\n",
     "        max_depth = trial.suggest_int(\"rf_max_depth\", 2, 32, log=True) if max_depth_option == \"Specify\" else None\n",
     "        class_weight = trial.suggest_categorical(\"rf_class_weight_option\", [None, \"balanced\"])\n",
-    "        classifier = RandomForestClassifier(random_state=1234, criterion=criterion, n_estimators=n_estimators, max_depth=max_depth, class_weight=class_weight)\n",
+    "        classifier = RandomForestClassifier(random_state=1234,  criterion=criterion, n_estimators=n_estimators, max_depth=max_depth, class_weight=class_weight)\n",
     "        \n",
     "    else:\n",
     "        classifier = SVC(\n",
     "            C=trial.suggest_float(\"svc_c\", 1e-10, 1e10, log=True),\n",
     "            kernel=trial.suggest_categorical(\"svc_kernel\", [\"linear\", \"poly\", \"rbf\", \"sigmoid\"]),\n",
     "            gamma=trial.suggest_categorical(\"svc_gamma\", [\"scale\", \"auto\"]),\n",
-    "            class_weight=trial.suggest_categorical(\"svc_class_weight_option\", [None, \"balanced\"])\n",
+    "            class_weight=trial.suggest_categorical(\"svc_class_weight_option\", [None, \"balanced\"]),\n",
     "            random_state=1234,\n",
     "        )\n",
     "\n",
@@ -907,7 +907,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
